<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meet Everywhere</string>
    <string name="main_layout_status_offline">Status: offline</string>
    <string name="main_layout_status_online">Status: online</string>
    <string name="main_layout_logged_as">Zalogowany jako:</string>
    <string name="main_layout_start_bt_activity">Uruchom czat Bluetooth</string>
    <string name="main_layout_start_gps_activity">Wyszukaj za pomocą GPS</string>
    <string name="main_layout_start_contacts_activity">Zarządzaj kontaktami</string>
    <string name="main_layout_start_profile_edition_activity">Edytuj swoje dane</string>
    <string name="main_layout_start_settings_activity">Ustawienia</string>
    <string name="main_layout_shutdown">Zakończ</string>
    <string name="visibility_all">Visible For Others</string>
    <string name="visibility_friends">Visible for friends</string>
    <string name="close">Close</string>
    <string name="minimize">Hide</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_meet_everywhere">Meet Everywhere!</string>
    <string name="gps">GPS Sensor</string>
    <string name="gsm">GSM Base Stations</string>
    <string name="gps_gsm">Both</string>
    <string name="trackingChoice">Tracking Method:</string>
    <string name="initialUserDiscription">Opis użytkownika widoczny dla innych (max. 100 znaków)</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile_details">ProfileDetails</string>
    <string name="tags_edition_text">Wpisz tagi oddzielone przecinkiem</string>
    <string name="tag_add_text">Dodaj tagi</string>
    <string name="tag_cancel_text">Powrót</string>
    <string name="tag_save_text">Zapisz</string>
    <string name="error_tags_required">This field is required</string>
    <string name="tag_delete_text">Usuń tagi</string>
    <string name="desc">Photo</string>
    <string name="tag_search_text">Szukaj</string>
    <string name="tag_refresh_text">Odświerz listę</string>
    <string name="perc_text">Minimalna zgodność tagów: 0%</string>
    <string name="tags_profile">Tagi</string>
    <string name="add_user_text">Wyślij zaproszenie</string>
    <string name="chat_text">Wyślij wiadomość</string>
    <string name="invite_hint">Wpisz dodatkową wiadomość</string>
    <string name="msg_sent_profile">Zaproszenie wysłane</string>
    <string name="msg_friend_profile">Twój znajomy</string>
    <string name="close_icon">close_icon</string>
    <string name="settings_icon">settings_icon</string>
    <string name="profile_icon">profile_icon</string>
    <string name="gps_icon">gps_icon</string>
    <string name="contacts_icon">contacts_icon</string>
    <string name="bt_icon">bt_icon</string>
    <string name="main_layout_user">user</string>
    <string name="accept_text">Akceptuj</string>
    <string name="unlock_text">Odblokuj</string>
    <string name="delete_friend_text">Usuń z listy znajomych</string>
    <string name="confirm_delete_friend_text">Usuń</string>
    <string name="delete_profile_text">Usuń ze znajomych</string>
    <string name="block_user_text">Zablokuj użytkownika</string>
    <string name="unlock_user_text">Odblokuj użytkownika</string>
    <string name="msg_user_blocked">Użytkownik zablokowany</string>
    <string name="confirm_accept_invitation_text">Zaakceptuj zaproszenie</string>
    <string name="image_description">Zdjecie profilowe</string>

    <!-- ************************************************************************************************* -->
    <!-- ************************************* Common strings *************************************** -->
    <!-- ************************************************************************************************* -->
    <string name="user_name">Username</string>
    <string name="user_description">User description</string>
    <string name="put_your_name_hint">Put your name</string>
    <string name="put_your_description_hint">Write your description (optional)</string>
    <string name="save_settings">Save settings</string>
    <string name="ErrorDialog.errorWarning">Error!</string>
    <string name="ErrorDialog.okButton">OK</string>

    <!-- ************************************************************************************************* -->
    <!-- ************************************* Login *************************************** -->
    <!-- ************************************************************************************************* -->

    <string name="ActivityLogin.login">Login</string>
    <string name="ActivityLogin.signIn">Sign in</string>
    <string name="ActivityLogin.password">Password</string>
    <string name="ActivityLogin.registerIfNotAccount">Nie masz konta? Zarejestruj się!</string>

    <!-- ************************************************************************************************* -->
    <!-- ************************************* Profile Edition *************************************** -->
    <!-- ************************************************************************************************* -->


    <!-- ************************************************************************************************* -->
    <!-- ************************************* Settings *************************************** -->
    <!-- ************************************************************************************************* -->
	<string name="SettingsActivity.bluetoothCheckBoxText">Wyszukiwanie Bluetooth</string>
	<string name="SettingsActivity.gpsCheckBoxText">Wyszukiwanie GPS</string>
	<string name="SettingsActivity.bluetoothCustomizeDeviceSearchingFrequencyTextLabel">Ustal częstotliwość wyszukiwania urządzeń przez Bluetooth</string>
	<string name="SettingsActivity.gpsCustomizeDeviceSearchingRadiusTextLabel">Ustal promień wyszukiwania urządzeń przez gps</string>
	<string name="SettingsActivity.setPercentageOfTagsToBeIdenticalTextLabel">Ustal minimalny procent zgodności tagów twoich oraz wyszukiwanej osoby</string>
	<string name="SettingsActivity.goToBlockedUsersListButtonText">Lista zablokowanych</string>
	<string name="SettingsActivity.goToFriendsListButtonText">Lista przyjaciół</string>
	<string name="SettingsActivity.saveSettingsButtonText">Zapisz ustawienia</string>
	<string name="SettingActivity.bluetoothDeviceSearchigFrequencyInformationText">Wyszukiwanie odbywa się co</string>
	<string name="SettingActivity.oneSecondText">sekundę</string>
	<string name="SettingsActivity.twoToFourSecondsText">sekundy</string>
	<string name="SettingsActivity.FiveOrMoreSecondsText">sekund</string>
	<string name="SettingsActivity.gpsDeviceSearchingRadiusInformationText">Wyszukiwanie w promieniu</string>
	<string name="SettingsActivity.oneKilometer">kilometra</string>
	<string name="SettingsActivity.twoOrMoreKilometers">kilometrów</string>
	<string name="SettingsActivity.notEnabled">Funkcja niedostepna</string>
	<string name="SettingsActivity.percentageOfIdenticaTagsInformationText">Zgodność tagów: </string>
	    


    <!-- ************************************************************************************************* -->
    <!-- ************************************* User Registration *************************************** -->
    <!-- ************************************************************************************************* -->
    <string name="attach_picture">Attach picture</string>
    <string name="UserRegistration.put_picture_label">Choose your profile picture (optional)</string>
    <string name="UserRegistration.register">Register</string>
    <string name="UserRegistration.password">Password</string>
    <string name="UserRegistration.confirmPassword">Confirm password</string>

    <!-- ************************************************************************************************* -->
    <!-- ************************************* Bluetooth *************************************** -->
    <!-- ************************************************************************************************* -->
    <string name="insert_message_text">Wpisz tekst</string>
    <string name="insert_message_hint">Podaj treść wiadomości</string>
    <string name="send_button">Wyślij</string>

    <!-- ************************************************************************************************* -->
    <!-- ************************************* Validation *************************************** -->
    <!-- ************************************************************************************************* -->
    <string name="Validation.nameNotProvied">Nie podales swojego nicka!</string>
    <string name="Validation.passwordNotProvided">Nie podałeś hasła!</string>
    <string name="Validation.confirmedPasswordNotProvided">Nie potwierdziłeś hasła!</string>
    <string name="Validation.passwordAndConfirmedPasswordAreDifferent">Hasło i potwierdzenie różnią się!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="Validation.loginFailed">&quot;Błąd logowania&quot;</string>
    <string name="Validation.userAlreadyExists">Użytkownik o takim nicku już istnieje!</string>

</resources>
