<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/nickname_profile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        />
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
     <ImageView
        android:id="@+id/photo_profile"
        
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:src="@drawable/user_icon"
        android:layout_margin="5dp"
        android:contentDescription="@string/desc" 
        />
    
     <TextView
        android:id="@+id/user_desc_profile"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

     </LinearLayout>
     
    <LinearLayout 
        android:id="@+id/invited_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    
    <ImageView
            android:id="@+id/send_icon_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="right"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/send_icon" />
    
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_sent_profile"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"/>
     
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/block_icon_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    
    <ImageView
            android:id="@+id/block_icon_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="right"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/block_icon" />
    
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_user_blocked"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"/>
     
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/friend_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    
    <ImageView
            android:id="@+id/friend_icon_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="right"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/add_user_icon" />
    
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msg_friend_profile"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"/>
     
    </LinearLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:text="@string/tags_profile"/>
    
     <TextView
        android:id="@+id/tags_profile"
        android:layout_width="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>
     
        <LinearLayout
      android:id="@+id/invite_friend"
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="showMoreFromView"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp">
      
       <ImageView
            android:id="@+id/add_icon_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/add_user_icon" />
     
      <TextView
            android:id="@+id/add_text_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/add_user_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="sendInvite" />
      
      </LinearLayout>
      
        <EditText
           android:id="@+id/invite_message"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:visibility="gone"
           android:hint="@string/invite_hint"
           />
        
         <ImageView
            android:id="@+id/send_icon2_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/send_icon" 
            android:visibility="gone"
            android:onClick="sendInvite"/>
      
       <LinearLayout
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="openChat"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp">
      
       <ImageView
            android:id="@+id/chat_icon_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/chat_icon" />
     
      <TextView
            android:id="@+id/chat_text_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/chat_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      
      </LinearLayout>
      
       
      <LinearLayout
      android:id="@+id/delete_friend_row"
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="deleteFriend"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp"
      android:visibility="gone">
      
       <ImageView
            android:id="@+id/delete_friend_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/delete_icon" />
     
      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/delete_profile_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      
      </LinearLayout>
      
       <LinearLayout
      android:id="@+id/block_user_row"
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="blockUser"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp"
      android:visibility="visible">
      
       <ImageView
            android:id="@+id/block_user_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/block_icon" />
     
      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/block_user_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      
      </LinearLayout>
      
        <LinearLayout
      android:id="@+id/unlock_user_row"
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="unlockUser"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp"
      android:visibility="gone">
      
       <ImageView
            android:id="@+id/unlock_user_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/unlock_icon" />
     
      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/unlock_user_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      
      </LinearLayout>
      
      <LinearLayout
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="backToMainMenu"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp">
      
       <ImageView
            android:id="@+id/back_icon_profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/back_icon" />
     
      <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/tag_cancel_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      
      </LinearLayout>
      
     
      
</LinearLayout>

</ScrollView>

