<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tags_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/tagsListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        

    </ListView>
    
   
    <LinearLayout
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="addTags">
      
        <EditText
        android:id="@+id/tagsTextField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/tags_edition_text"
        android:inputType="text"
        android:layout_marginLeft="5dp">
    </EditText>
      
       <ImageView
            android:id="@+id/add_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/add_icon" 
            android:layout_marginRight="5dp"/>
     
      
      </LinearLayout>

    <TextView
            android:id="@+id/perc_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/perc_text"
            android:textSize="20sp"
            android:textStyle="bold" />
    
    
    <SeekBar
        android:id="@+id/perc_slider"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="10dp"
        android:progress="1"
        android:secondaryProgress="1" />
      
    
      <LinearLayout
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="deleteTags"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp">
      
       <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/delete_icon" />
     
      <TextView
            android:id="@+id/delete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/tag_delete_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      
      </LinearLayout>
      
       <LinearLayout
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="searchTags"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp">
      
       <ImageView
            android:id="@+id/save_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/search_icon" />
     
      <TextView
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/tag_search_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      
      </LinearLayout>
      
        <LinearLayout
      android:orientation="horizontal" 
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:onClick="backToMainMenu"
      android:layout_marginBottom="5dp"
      android:layout_marginTop="5dp">
      
       <ImageView
            android:id="@+id/back_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/bt_icon"
            android:src="@drawable/back_icon" />
     
      <TextView
            android:id="@+id/back_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="75dp"
            android:text="@string/tag_cancel_text"
            android:textSize="20sp"
            android:textStyle="bold" />
      
      </LinearLayout>
    
    
   

</LinearLayout>
